<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Magister">
    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:orderInCategory="1"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_clear_cache"
        android:title="@string/action_clear_cache"
        android:orderInCategory="2"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_change"
        android:title="@string/action_change"
        android:orderInCategory="3"
        android:showAsAction="never" />
    <item
        android:id="@+id/favourite_schools"
        android:title="@string/favourite_schools"
        android:orderInCategory="4"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_hide_actionbar"
        android:title="@string/action_hide_actionbar"
        android:orderInCategory="5"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_show_actionbar"
        android:title="@string/action_show_actionbar"
        android:orderInCategory="6"
        android:showAsAction="never" />
</menu>
